# SpootFeed

./: .dockerignore  .env  .gitignore  Dockerfile  env.example
crates/feeder/: Cargo.toml  env.example
crates/feeder/src/: config.rs  main.rs  routes.rs
