[package]
name = "feeder"
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
proto = {path = "../proto"}

anyhow = "1.0.100"
dotenvy = "0.15.7"

axum = { version = "0.8.7", features = ["ws"] }
tokio = { version = "1.48.0", features = ["full"] }

tower = "0.5.2"
tower-http = { version = "0.6.7", features = ["trace", "cors"] }

tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
